--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
-        python3 -m pytest
+        python -m pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -40,8 +40,9 @@ jobs:
     - name: Push to Docker Hub
       uses: docker/build-push-action@v2
       with:
+        context: ./api_yamdb/
         push: true
-        tags: lzrdou/api_yamdb:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
